# pi-calculation

./: .gitignore  HISTORY.rst  Pipfile  README.rst  control.js  control.monk  detail.html  freeze.txt  index.html  life.js  npm-shrinkwrap.json  package.json  pyproject.toml  requirements.txt  server.py  table.js  table.monk  view.js  view.js.map  webpack.config.js
