[tool.poetry]
name = "pi-calculation"
version = "0.1.0"
description = "Demo project for pi-calcuation in web-applicaiton."
authors = ["Stepan Bakshayev <step2back@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
aiohttp-jinja2 = "^1.2.0"
sqlalchemy = "^1.3.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
